[metadata]
license_file = LICENSE
description_file = README.md

[options]
packages = find:
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .
exclude = tests, docs, examples

[flake8]
max-line-length = 120
exclude = .git, __pycache__, docs, tests, examples

[isort]
profile = black
line_length = 120

[aliases]
test = pytest